change subs to fixed position + ordering z-index

--- a/style.scss
+++ b/style.scss
@@ -1783,7 +1783,8 @@ form {
 
 // Subscription
 .subscription {
-  position: absolute;
+  position: fixed;
+  z-index: 999;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
